--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
       <a href="">link</a>
       <button>click</button>
     </header>
+    <footer>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae
+        omnis suscipit mollitia quibusdam accusamus officiis architecto.
+        Similique atque tenetur a nisi commodi accusantium autem molestias vero
+        assumenda pariatur, sed numquam?
+      </p>
+    </footer>
   </body>
 </html>
