--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <h1>Text</h1>
         <button>click</button>
       </section>
+      <section>
+        <ul>
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+        </ul>
+      </section>
     </main>
     <footer>
       <p>
