--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       </section>
       <section>
         <ul>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
+          <li><img src="./img/cat1.jpg" alt="" /></li>
+          <li><img src="./img/cat2.jpg" alt="" /></li>
+          <li><img src="./img/cat3.jpg" alt="" /></li>
         </ul>
       </section>
     </main>
